ScreenFlowPlatformEvent/force-app/main/default/objects/Screen_Flow_Event__e/Screen_Flow_Event__e.object-meta.xml
<CustomObject>
    <label>Screen Flow Event</label>
    <pluralLabel>Screen Flow Events</pluralLabel>
</CustomObject>