ScreenFlowPlatformEvent/force-app/main/default/objects/Screen_Flow_Event__e/fields/Input_Variables__c.field-meta.xml
<CustomField>
    <fullName>Input_Variables__c</fullName>
    <label>Input Variables</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>