ScreenFlowPlatformEvent/force-app/main/default/objects/Screen_Flow_Event__e/fields/Modal_Header_Label__c.field-meta.xml
<CustomField>
    <fullName>Modal_Header_Label__c</fullName>
    <label>Modal Header Label</label>
    <length>255</length>
    <type>Text</type>
</CustomField>