ScreenFlowPlatformEvent/force-app/main/default/objects/Screen_Flow_Event__e/fields/Screen_Flow_API_Name__c.field-meta.xml
<CustomField>
    <fullName>Screen_Flow_API_Name__c</fullName>
    <label>Screen Flow API Name</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>